[tool.poetry]
name = "blockbuster-core"
version = "0.0.1"
description = ""
authors = ["Owen Campbell"]
readme = "README.rst"
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
sphinx = "^1.8"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
isort = "^4.3"
pytest-cov = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
