[tool.poetry]
name = "blockbuster-core"
packages = [{include = "blockbuster"}]
version = "0.3.0"
description = ""
authors = ["Owen Campbell"]
readme = "README.rst"
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.6"
attrs = "^19.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
sphinx = "^1.8"
black = {version = "^18.3-alpha.0",allow-prereleases = true}
isort = "^4.3"
pytest-cov = "^2.6"
doc8 = "^0.8.0"
bumpversion = "^0.5.3"
hypothesis = "^5.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
